--- a/menu.html
+++ b/menu.html
@@ -159,7 +159,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Pane all'aglio
+                                                    <p class="text-menu-2">Pane all'aglio
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Garlic pizza bread with olive oil and
@@ -176,7 +176,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Bruschetta
+                                                    <p class="text-menu-2">Bruschetta
                                                     </p>
                                                 </div>
 
@@ -196,7 +196,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Anelli di Calamari
+                                                    <p class="text-menu-2">Anelli di Calamari
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Squid rings cooked to perfection with
@@ -216,7 +216,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Gamberi Saporiti
+                                                    <p class="text-menu-2">Gamberi Saporiti
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(King prawns cooked in creamy garlic
@@ -235,7 +235,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Melanzane di Parmigiana
+                                                    <p class="text-menu-2">Melanzane di Parmigiana
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Baked eggplant with tomato, mozzarella
@@ -260,7 +260,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Cozze alla Tarantina
+                                                    <p class="text-menu-2">Cozze alla Tarantina
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Fresh mussels cooked in tomato chilli
@@ -278,7 +278,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Antipasto Rustico
+                                                    <p class="text-menu-2">Antipasto Rustico
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Cold cuts of delicacies served with
@@ -299,7 +299,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Inslata Caprese
+                                                    <p class="text-menu-2">Inslata Caprese
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Fresh tomato, mozzarella, fresh basil,
@@ -319,7 +319,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Inslata Greca
+                                                    <p class="text-menu-2">Inslata Greca
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Tomato, cucumber, red onion, kalamata
@@ -340,7 +340,7 @@
                                             <div class="col-9">
                                                 <div>
                                                     <img src="assets/images/line-bar.png" class="img_container" />
-                                                    <p class="text-menu">Inslata Shopska
+                                                    <p class="text-menu-2">Inslata Shopska
                                                     </p>
                                                 </div>
                                                 <small class="menu_small_des">(Tomato, cucumber, grated feta cheese,
@@ -629,7 +629,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Margheritas
+                                            <p class="text-menu-2">Margheritas
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, oregano, fresh
@@ -646,7 +646,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Bay of Plenty
+                                            <p class="text-menu-2">Bay of Plenty
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, chicken, avocado,
@@ -665,7 +665,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Pepperoni Diavola
+                                            <p class="text-menu-2">Pepperoni Diavola
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, salami,
@@ -682,7 +682,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Hawaiian
+                                            <p class="text-menu-2">Hawaiian
                                             </p>
                                         </div>
 
@@ -700,7 +700,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Calzone
+                                            <p class="text-menu-2">Calzone
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Folded pizza filled with ham, salami, spinach,
@@ -725,7 +725,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Capricciosa
+                                            <p class="text-menu-2">Capricciosa
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, ham, fresh
@@ -744,7 +744,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Vegetariana
+                                            <p class="text-menu-2">Vegetariana
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, capsicums, fresh
@@ -764,7 +764,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Siciliana
+                                            <p class="text-menu-2">Siciliana
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, anchovies, capers,
@@ -782,7 +782,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Quattro stagioni in Caprì
+                                            <p class="text-menu-2">Quattro stagioni in Caprì
                                             </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, artichokes, ham, fresh
@@ -995,7 +995,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Tiramisu
+                                        <p class="text-menu-2">Tiramisu
                                         </p>
                                     </div>
 
@@ -1012,7 +1012,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Panna cotta
+                                        <p class="text-menu-2">Panna cotta
                                         </p>
                                     </div>
 
@@ -1029,7 +1029,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Creme brulee
+                                        <p class="text-menu-2">Creme brulee
                                         </p>
                                     </div>
 
@@ -1045,7 +1045,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Gelato al Limoncello
+                                        <p class="text-menu-2">Gelato al Limoncello
                                         </p>
                                     </div>
 
@@ -1060,7 +1060,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Delizia alla banana
+                                        <p class="text-menu-2">Delizia alla banana
                                         </p>
                                     </div>
 
@@ -1075,7 +1075,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Banana Split
+                                        <p class="text-menu-2">Banana Split
                                         </p>
                                     </div>
                                 </div>
