--- a/takeawaymenu.html
+++ b/takeawaymenu.html
@@ -160,7 +160,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Margheritas</p>
+                                            <p class="text-menu-2">Margheritas</p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, oregano, fresh
                                             basil</small>
@@ -179,7 +179,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Quattro stagioni in Caprì </p>
+                                            <p class="text-menu-2">Quattro stagioni in Caprì </p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, artichokes,
                                             ham, fresh
@@ -197,7 +197,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Siciliana </p>
+                                            <p class="text-menu-2">Siciliana </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, anchovies, capers,
                                             olives)</small>
@@ -217,7 +217,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Pepperoni Diavola </p>
+                                            <p class="text-menu-2">Pepperoni Diavola </p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, salami,
                                             capsicums</small>
@@ -237,7 +237,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Pancetta </p>
+                                            <p class="text-menu-2">Pancetta </p>
                                         </div>
                                         <small class="menu_small_des">Homemade tomato, mozzarella, bacon, fresh
                                             mushrooms,
@@ -261,7 +261,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Hawaiian </p>
+                                            <p class="text-menu-2">Hawaiian </p>
                                         </div>
                                         <small class="menu_small_des">(Tomato sauce, mozzarella, juicy pineapple,
                                             ham)</small>
@@ -279,7 +279,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Calzone (Folded Pizza) </p>
+                                            <p class="text-menu-2">Calzone (Folded Pizza) </p>
                                         </div>
                                         <small class="menu_small_des">Homemade tomato, mozzarella, salami, ham, spinach,
                                             sundried tomato and feta cheese</small>
@@ -296,7 +296,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Capricciosa</p>
+                                            <p class="text-menu-2">Capricciosa</p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, ham, fresh
                                             mushrooms</small>
@@ -316,7 +316,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Bay of Plenty </p>
+                                            <p class="text-menu-2">Bay of Plenty </p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, chicken,
                                             avocado,
@@ -336,7 +336,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Vegetariana</p>
+                                            <p class="text-menu-2">Vegetariana</p>
                                         </div>
                                         <small class="menu_small_des">Homemade Tomato sauce, mozzarella, capsicums,
                                             fresh
@@ -604,7 +604,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Pane All'aglio</p>
+                                        <p class="text-menu-2">Pane All'aglio</p>
                                     </div>
                                     <small class="menu_small_des">Garlic pizza bread wuith olive oil, garlic and oregano
                                         *Choice of extra cheese on top $12.00</small>
@@ -621,7 +621,7 @@
                                 <div class="col-9">
                                     <div>
                                         <img src="assets/images/line-bar.png" class="img_container" />
-                                        <p class="text-menu">Bruschetta Classica</p>
+                                        <p class="text-menu-2">Bruschetta Classica</p>
                                     </div>
                                     <small class="menu_small_des">Ask the server for the flavour</small>
                                 </div>
@@ -641,7 +641,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Anelli Di Calamari</p>
+                                            <p class="text-menu-2">Anelli Di Calamari</p>
                                         </div>
                                         <small class="menu_small_des">Tender squid rings grilled to perfection with
                                             garlic
@@ -662,7 +662,7 @@
 
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Gamberi Saporiti
+                                            <p class="text-menu-2">Gamberi Saporiti
 
                                             </p>
                                         </div>
@@ -681,7 +681,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Insalata Greca
+                                            <p class="text-menu-2">Insalata Greca
 
                                             </p>
                                         </div>
@@ -703,7 +703,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">
+                                            <p class="text-menu-2">
                                                 Parmigiana Di Melanzane (V)
 
                                             </p>
@@ -901,7 +901,7 @@
                                     <div class="col-9">
                                         <div>
                                             <img src="assets/images/line-bar.png" class="img_container" />
-                                            <p class="text-menu">Tiramisu
+                                            <p class="text-menu-2">Tiramisu
                                             </p>
                                         </div>
 
