--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <!-- Contact us start here -->
 
   <div class="container mt-3" data-aos="fade-up">
-    <div class="contact_form " id="contact_form">
+    <div class="contact_form home_form" id="contact_form">
       <h1 class="contact_heading text-center">Contact Us</h1>
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
