--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                       </div>
                       <div class="col-3 text-right">
                         <div class="arrow_div">
-                          <a href="/menu.html">
+                          <a href="menu.html">
                             <img src="assets/images/arrow1.png" alt="" />
                           </a>
                         </div>
@@ -268,7 +268,7 @@
                       </div>
                       <div class="col-3 text-right">
                         <div class="arrow_div">
-                          <a href="/menu.html">
+                          <a href="menu.html">
 
 
                             <img src="assets/images/arrow1.png" alt="" />
@@ -288,7 +288,7 @@
                       </div>
                       <div class="col-3 text-right">
                         <div class="arrow_div">
-                          <a href="/menu.html">
+                          <a href="menu.html">
 
 
                             <img src="assets/images/arrow1.png" alt="" />
@@ -311,7 +311,7 @@
                       </div>
                       <div class="col-3 text-right">
                         <div class="arrow_div">
-                          <a href="/menu.html">
+                          <a href="menu.html">
 
 
                             <img src="assets/images/arrow1.png" alt="" />
@@ -331,7 +331,7 @@
                       </div>
                       <div class="col-3 text-right">
                         <div class="arrow_div">
-                          <a href="/menu.html">
+                          <a href="menu.html">
 
 
                             <img src="assets/images/arrow1.png" alt="" class="img-fluid" />
